--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.515.0",
     "reka-ui": "^2.3.1",
     "tailwind-merge": "^3.3.1",
